# Meinkraft

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/Meinkraft/: BlockContainer.cpp  BlockContainer.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkBuffer.cpp  ChunkBuffer.h  ChunkBufferManager.cpp  ChunkBufferManager.h  ChunkBufferSegment.cpp  ChunkBufferSegment.h  ConcurrentChunkTaskQueue.cpp  ConcurrentChunkTaskQueue.h  Main.cpp  MainThreadChunkTaskQueue.cpp  MainThreadChunkTaskQueue.h  MountainGenerator.cpp  MountainGenerator.h  NoiseGenerator.cpp  NoiseGenerator.h  Toolbox.cpp  World.cpp  World.h  WorldGenerator.h
src/Meinkraft/Block/: BlockDefinition.h  BlockManager.cpp  BlockManager.h  VertexGenerators.cpp  VertexGenerators.h
src/Meinkraft/GL/: ShaderProgram.cpp  ShaderProgram.h  ShaderProgramCreateInfo.h  ShaderProgram_setUniform.cpp  VertexData.h
src/Meinkraft/Helper/: FileHelper.h  MathHelper.h  ShaderHelper.h  SpecHelper.cpp
src/Meinkraft/Rendering/: Renderer.cpp  Renderer.h
src/Meinkraft/Rendering/RenderPass/: ChunksPass.cpp  ChunksPass.h  RenderPass.h  SkyboxPass.cpp  SkyboxPass.h
src/Meinkraft/Texture/Block/: BlockTexture.cpp  BlockTexture.h  BlockTextureManager.cpp  BlockTextureManager.h
